# fw-custom-information-sync

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  interactive-run.sh  manifest.json  output_with_id_timestamp.csv  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: get_inputs.py  main.py  run_1.py  run_2.py
docs/: guide.docx  release_notes.md
tests/: beta.py  conftest.py  test_inputs.py  test_main.py  test_parser.py  test_popup.py  test_run_1.py  test_run_2.py  upload.py  utils_for_testing.py
tests/gears/dest_on_latest/: README  config.json
tests/gears/dest_on_latest/output/: sessions.csv
tests/gears/empty/: config.json
tests/gears/empty/input/subjects/: subjects.csv
tests/gears/parser/input/acquisitions/: acquisitions.csv
tests/gears/popup_on_latest/: config.json
tests/gears/popup_on_latest/input/acquisitions/: acquisitions.csv
tests/gears/popup_on_latest/input/sessions/: sessions.csv
tests/gears/popup_on_latest/input/subjects/: subjects.csv
tests/gears/popup_on_latest/output/: acquisitions.csv  sessions.csv  subjects.csv
tests/gears/some_inputs/: config.json
utils/: cde_template.yaml  metadata_fields.yaml
