[tool.poetry]
name = "fw-gear-relabel-container"
version = "0.5.3"
description = "Change container labels in preparation for curate-bids gear"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/scientific-solutions/gears/relabel-container"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.11"
flywheel-gear-toolkit = "^0.6"
flywheel-sdk = "^16.8.0"
pandas = "^2.2.1"
fw-client = "^0.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[tool.ruff]
lint.ignore-init-module-imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
